<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:id="@+id/txtCor"
        android:layout_weight="1"
        tools:ignore="InefficientWeight" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtNome"
                android:text="@string/lbl_nome"
                android:layout_marginLeft="20dp"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:text="@string/lbl_telefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtTelefone"
                android:paddingLeft="20dp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="42dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:srcCompat="@mipmap/ligar"
                android:id="@+id/ibtLigar"
                android:layout_weight="1"
                android:contentDescription="@string/lbl_ligar"
                tools:ignore="InefficientWeight,NestedWeights" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>